Fixed contact modal text too small with vmax

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -93,7 +93,7 @@ h6 {
     text-align: center;
     font-family: Roboto, sans-serif;
     font-weight: 300;
-    font-size: 120%;
+    font-size: 2.2vmax;
     background-color: #141414;
     margin: auto;
     padding: 20px;
